--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -1,3 +1,2 @@
 network.host: 0.0.0.0
-discovery.zen.ping.multicast.enabled: false
-discovery.zen.ping.unicast.hosts: ["mesos-master.service.consul:31036"]
+discovery.zen.ping.unicast.hosts: ["10.0.8.134:9200"]
